--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                         <i class="fa-solid fa-hands-holding-child"></i>
                     </span>
                     <h4 class="my-3">La Guajira - Venezuela</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted"> Comedores para niños en situación de extrema pobreza.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -70,8 +69,7 @@
                         <i class="fa-solid fa-hands-holding-child"></i>
                     </span>
                     <h4 class="my-3">Triple Frontera Amazonas</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Comedores para personas vulnerables.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -79,8 +77,7 @@
                         <i class="fa-solid fa-hands-holding-child"></i>
                     </span>
                     <h4 class="my-3">Tailandia</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Casa Refugio de Mujeres.</p>
                 </div>
             </div>
         </div>
@@ -89,7 +86,7 @@
     <section class="page-section bg-light" id="portfolio">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Testimonios</h2>
+                <h2 class="section-heading text-uppercase">Misiones</h2>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
             <div class="row">
@@ -130,10 +127,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
+                            <img class="img-    " src="assets/img/portfolio/3.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">La Guajira</div>
+                            <div class="portfolio-caption-heading">Triple Frontera</div>
                             <!-- <div class="portfolio-caption-subheading text-muted">Identity</div> -->
                         </div>
                     </div>
@@ -154,13 +151,21 @@
                             alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4>2011</h4>
+                            <h4>2016</h4>
                             <h4 class="subheading">Nacimiento</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero
-                                unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                            <p class="text-muted">Women In Mission empieza en el año 2016 cuando la Pastora Carmen
+                                Asencio hace realidad un sueño que tuvo desde pequeña. Cuando ella era jovén ganó un
+                                concurso de música en Perú a nivel nacional y con ello logró visitar a los pueblos más
+                                alejados y pobres del país. Al ver esa pobreza y la muerte algo nació dentro de ella
+                                para poder cambiar esa situación.
+
+                                Más adelante ella levanta una iglesia con su esposo en Valencia (España) y a través de
+                                una crisis muy fuerte que ella tuvo Dios le habla de ese sueño que tuvo en su juventud.
+                                Es en ese momento que empieza a llamar por teléfono a gente que tenía esa misma hambre y
+                                sed de poder ayudar a las personas más vulnerables.
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -173,9 +178,10 @@
                             <h4 class="subheading">Misión</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero
-                                unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                            <p class="text-muted">Empoderar a las mujeres haciéndoles ver su valor como mujeres dentro
+                                de la sociedad, comenzando por su propio hogar (en la familia) y en su comunidad. Porque
+                                si una mujer cambia, cambia su familia y por lo tanto la sociedad. Asimismo, atendemos a
+                                niños y ancianos en situación de vulnerabilidad.</p>
                         </div>
                     </div>
                 </li>
@@ -188,9 +194,12 @@
                             <h4 class="subheading">Visión</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero
-                                unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                            <p class="text-muted">La visión de Women in Mission es ver a la mujer cristiana plenamente
+                                restaurada en sus tres dimensiones fundamentales: su casa alma, su casa hogar y su casa
+                                iglesia. Creemos que una mujer transformada por el poder de Dios se convierte en un
+                                agente de cambio en su entorno, y nuestro anhelo es acompañarla en ese proceso de
+                                restauración y empoderamiento espiritual
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -203,9 +212,11 @@
                             <h4 class="subheading">Objetivos</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero
-                                unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                            <p class="text-muted">Queremos seguir impactando vidas al darle continuidad a los programas
+                                de protección y desarrollo a las mujeres y niños de las comunidades de las zonas más
+                                vulnerables de Tailandia, Perú y Venezuela. Así como poder llegar a más lugares donde
+                                las mujeres y los niños requieran de nuestra ayuda, llevando no solo recursos si no
+                                también la palabra poderosa del Señor. </p>
                         </div>
                     </div>
                 </li>
@@ -235,7 +246,7 @@
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                         <h4>Carmen Asencio</h4>
-                        <p class="text-muted">Cargo</p>
+                        <p class="text-muted">Presidenta </p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i
                                 class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i
@@ -260,8 +271,8 @@
                 <div class="col-lg-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                        <h4>Azahara</h4>
-                        <p class="text-muted">Cargo</p>
+                        <h4> Azahara Hilario </h4>
+                        <p class="text-muted">Secretaria</p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i
                                 class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i
@@ -273,8 +284,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque,
-                        laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Queremos seguir impactando vidas al darle continuidad a los programas de
+                        protección y desarrollo a las mujeres y niños de las comunidades de las zonas más vulnerables de
+                        Tailandia, Perú y Venezuela. Así como poder llegar a más lugares donde las mujeres y los niños
+                        requieran de nuestra ayuda, llevando no solo recursos si no también la palabra poderosa del
+                        Señor.</p>
                 </div>
             </div>
         </div>
@@ -409,19 +423,29 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Testimonio</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt
-                                    repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae,
-                                    nostrum, reiciendis facere nemo!</p>
+                                <h2 class="text-uppercase">La Guajira - Venezuela</h2>
+                                <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..."
+                                    style="height: 700px;" />
+                                <p>Trabajamos con el firme propósito de brindar alimento, contención y esperanza a niños
+                                    que viven en condiciones de extrema pobreza. Actualmente sostenemos un comedor donde
+                                    <strong>65 niños reciben un desayuno cada mañana, de lunes a viernes</strong>.
+                                    Nuestro objetivo es expandir esta labor y llegar a <strong> comedores
+                                        infantiles</strong>,
+                                    asegurando así que más niños puedan acceder, cada día, a un plato de comida y a un
+                                    espacio digno donde crecer.
                                 <ul class="list-inline">
+                                    <li>Meta: habilitar y mantener 10 comedores activos</li>
+                                    <li>Costo mensual total: 3.000 €</li>
+                                    <li>Costo anual estimado: 36.000 €</li>
+                                </ul>
+                                </p>
+                                <!-- <ul >
                                     <li>
                                         <strong>Client:</strong>
                                         La Guajira
                                     </li>
-                                </ul>
+                                </ul> -->
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
@@ -445,14 +469,14 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Testimonio</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt
-                                    repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae,
-                                    nostrum, reiciendis facere nemo!</p>
-                                <ul class="list-inline">
+                                <h2 class="text-uppercase">Tailandia</h2>
+                                <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." /
+                                    style="height: 700px;">
+                                <p>Se necesitan 350 euros mensuales para seguir manteniendo esta casa que alberga 40
+                                    mujeres con el fin de alejarlas de la prostitución enseñandoles otras profesiones.
+                                </p>
+                                <!-- <ul class="list-inline">
                                     <li>
                                         <strong>Client:</strong>
                                         Explore
@@ -461,7 +485,7 @@
                                         <strong>Category:</strong>
                                         Graphic Design
                                     </li>
-                                </ul>
+                                </ul> -->
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
@@ -485,21 +509,20 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2 class="text-uppercase">Triple Frontera</h2>
+                                <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt
-                                    repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae,
-                                    nostrum, reiciendis facere nemo!</p>
+                                <p></p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Client:</strong>
-                                        Finish
+                                        \<strong>Comedor para ancianos:</strong> 30 ancianos beneficiarios de una bolsa
+                                        de alimentos y
+                                        productos de higiene semanalmente. El costo es de 500 euros mensuales.
                                     </li>
                                     <li>
-                                        <strong>Category:</strong>
-                                        Identity
+                                        <strong>Comedor para niños:</strong> son 35 niños que desayunan y comen
+                                        diariamente de lunes a
+                                        domingo. Costo: 600 euros mensuales.
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
