--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Sobre Nosotros</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
             <ul class="timeline">
                 <li>
@@ -239,7 +239,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Nuestro Equipo de Trabajo</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
             <div class="row">
                 <div class="col-lg-4">
@@ -257,9 +257,22 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                        <h4>Rosa</h4>
-                        <p class="text-muted">Cargo</p>
+                        <img class="mx-auto rounded-circle" src="assets/img/incognito.jpg" alt="..." />
+                        <h4> Azahara Hilario </h4>
+                        <p class="text-muted">Secretaria</p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i
+                                class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/incognito.jpg" alt="..." />
+                        <h4>Rosa Ferreira</h4>
+                        <p class="text-muted">Recaudación de fondos</p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i
                                 class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"
@@ -268,11 +281,25 @@
                             aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-4">
+
+                <div class="col-lg-6">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                        <h4> Azahara Hilario </h4>
-                        <p class="text-muted">Secretaria</p>
+                        <img class="mx-auto rounded-circle" src="assets/img/incognito.jpg" alt="..." />
+                        <h4>Ingrid Sandoval</h4>
+                        <p class="text-muted"></p>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"
+                            aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"
+                            aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/incognito.jpg" alt="..." />
+                        <h4> Leydy Yurani Espinosa</h4>
+                        <p class="text-muted"></p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i
                                 class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i
@@ -297,11 +324,11 @@
     <div class="py-5">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/microsoft.svg"
+                <div class="col-md-12 col-sm-12 my-12">
+                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/logo-az.png"
                             alt="..." aria-label="Microsoft Logo" /></a>
                 </div>
-                <div class="col-md-3 col-sm-6 my-3">
+                <!-- <div class="col-md-3 col-sm-6 my-3">
                     <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg"
                             alt="..." aria-label="Google Logo" /></a>
                 </div>
@@ -312,7 +339,7 @@
                 <div class="col-md-3 col-sm-6 my-3">
                     <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg"
                             alt="..." aria-label="IBM Logo" /></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -321,7 +348,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contactnos</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h3 class="section-subheading text-muted">Escribenos para obtner más información.</h3>
             </div>
             <!-- * * * * * * * * * * * * * * *-->
             <!-- * * SB Forms Contact Form * *-->
