--- a/index.html
+++ b/index.html
@@ -16,73 +16,36 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/navbar-mision.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-mision">
         <div class="container">
-            <a class="navbar-brand" href="#page-top"><img src="assets/img/wim-logo.svg" alt="..." /></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars ms-1"></i>
+            <a class="navbar-brand" href="#"><img src="assets/img/wim-logo.svg" alt="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContenido"
+                aria-controls="navContenido" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Testimonios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">Sobre Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+            <div class="collapse navbar-collapse" id="navContenido">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase">
+                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#sobre-nosotros">Sobre Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#equipo">Equipo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!-- Masthead-->
     <header class="masthead">
         <div class="container">
             <div class="masthead-subheading"></div>
             <div class="masthead-heading text-uppercase"></div>
-            <!-- <a class="btn btn-primary btn-xl text-uppercase" href="#services"></a> -->
         </div>
     </header>
-    <!-- Services-->
-    <section class="page-section" id="services">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="section-heading text-uppercase">Misiones</h2>
-                <h3 class="section-subheading text-muted">Nuestras misiones en el Mundo.</h3>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
-                        <i class="fa-solid fa-hands-holding-child"></i>
-                    </span>
-                    <h4 class="my-3">La Guajira - Venezuela</h4>
-                    <p class="text-muted"> Comedores para niños en situación de extrema pobreza.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
-                        <i class="fa-solid fa-hands-holding-child"></i>
-                    </span>
-                    <h4 class="my-3">Triple Frontera Amazonas</h4>
-                    <p class="text-muted">Comedores para personas vulnerables.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i> -->
-                        <i class="fa-solid fa-hands-holding-child"></i>
-                    </span>
-                    <h4 class="my-3">Tailandia</h4>
-                    <p class="text-muted">Casa Refugio de Mujeres.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Portfolio Grid-->
     <section class="page-section bg-light" id="portfolio">
         <div class="container">
             <div class="text-center">
@@ -91,7 +54,6 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <!-- Portfolio item 1-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
@@ -101,12 +63,10 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">La Guajira</div>
-                            <!-- <div class="portfolio-caption-subheading text-muted">Illustration</div> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <!-- Portfolio item 2-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                             <div class="portfolio-hover">
@@ -116,12 +76,10 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Tailandia</div>
-                            <!-- <div class="portfolio-caption-subheading text-muted">Graphic Design</div> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
-                    <!-- Portfolio item 3-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
@@ -131,7 +89,6 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Triple Frontera</div>
-                            <!-- <div class="portfolio-caption-subheading text-muted">Identity</div> -->
                         </div>
                     </div>
                 </div>
@@ -143,7 +100,6 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Sobre Nosotros</h2>
-                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
             <ul class="timeline">
                 <li>
@@ -190,7 +146,6 @@
                             alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <!-- <h4>December 2015</h4> -->
                             <h4 class="subheading">Visión</h4>
                         </div>
                         <div class="timeline-body">
@@ -208,7 +163,6 @@
                             alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <!-- <h4>July 2020</h4> -->
                             <h4 class="subheading">Objetivos</h4>
                         </div>
                         <div class="timeline-body">
@@ -239,7 +193,6 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Nuestro Equipo de Trabajo</h2>
-                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
             <div class="row">
                 <div class="col-lg-4">
@@ -328,18 +281,6 @@
                     <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/logo-az.png"
                             alt="..." aria-label="Microsoft Logo" /></a>
                 </div>
-                <!-- <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg"
-                            alt="..." aria-label="Google Logo" /></a>
-                </div>
-                <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg"
-                            alt="..." aria-label="Facebook Logo" /></a>
-                </div>
-                <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg"
-                            alt="..." aria-label="IBM Logo" /></a>
-                </div> -->
             </div>
         </div>
     </div>
@@ -350,13 +291,6 @@
                 <h2 class="section-heading text-uppercase">Contactnos</h2>
                 <h3 class="section-subheading text-muted">Escribenos para obtner más información.</h3>
             </div>
-            <!-- * * * * * * * * * * * * * * *-->
-            <!-- * * SB Forms Contact Form * *-->
-            <!-- * * * * * * * * * * * * * * *-->
-            <!-- This form is pre-integrated with SB Forms.-->
-            <!-- To make this form functional, sign up at-->
-            <!-- https://startbootstrap.com/solution/contact-forms-->
-            <!-- to get an API token!-->
             <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                 <div class="row align-items-stretch mb-5">
                     <div class="col-md-6">
