--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-mision">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="assets/img/wim-logo.svg" alt="Logo"></a>
+            <a class="navbar-brand" href="#"><img src="assets/img/wim-logo.png" alt="Logo"></a>
+            <a class="navbar-brand" href="#">WOMEN IN MISSION</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContenido"
                 aria-controls="navContenido" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,10 +41,42 @@
             </div>
         </div>
     </nav>
-    <header class="masthead">
-        <div class="container">
-            <div class="masthead-subheading"></div>
-            <div class="masthead-heading text-uppercase"></div>
+    <header class="masthead" style="background-color: rgb(255, 255, 255);">
+        <div id="mainCarousel" class="carousel slide masthead" data-bs-ride="carousel" style="height: 100%;">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/carrousel/1.jpg" class="d-block w-100" alt="Foto 1" style="height: 823px; object-fit: contain;">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carrousel/2.jpg" class="d-block w-100" alt="Foto 2" style="height: 823px; object-fit: contain;">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carrousel/3.jpg" class="d-block w-100" alt="Foto 3" style="height: 823px; object-fit: contain;">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carrousel/4.jpg" class="d-block w-100" alt="Foto 4" style="height: 823px; object-fit: contain;">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carrousel/5.jpg" class="d-block w-100" alt="Foto 5" style="height: 823px; object-fit: contain;">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carrousel/6.jpg" class="d-block w-100" alt="Foto 6" style="height: 823px; object-fit: contain;">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carrousel/7.jpg" class="d-block w-100" alt="Foto 7" style="height: 823px; object-fit: contain;">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carrousel/8.jpg" class="d-block w-100" alt="Foto 8" style="height: 823px; object-fit: contain;">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
         </div>
     </header>
     <section class="page-section bg-light" id="portfolio">
